--- a/notes_for_prob_stats.ipynb
+++ b/notes_for_prob_stats.ipynb
@@ -55,15 +55,6 @@
     "for i in arr:\n",
     "    print(i)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def "
-   ]
   }
  ],
  "metadata": {
@@ -95,7 +86,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "varInspector": {
    "cols": {
